--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name='theme-color' content="#13547A">
+
+    <link rel="apple-touch-icon" href="/favicon-manifest.png" />
+    
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Joaquin Noguera</title>
+
 </head>
 <body>
     <div id="app"></div>
