--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,7 @@
 <script>
      if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-            navigator.serviceWorker.register('/service-worker.js').then(registration => {
-                console.log('SW registered: ', registration);
-        }).catch(registrationError => {
-            console.log('SW registration failed: ', registrationError);
-        });
+            navigator.serviceWorker.register('/service-worker.js')
    });
  }
 </script>
