--- a/public/index.html
+++ b/public/index.html
@@ -23,4 +23,17 @@
    });
  }
 </script>
+<script type="application/ld+json">
+    {
+     "@context" : "http://schema.org",
+     "@type" : "Website",
+     "name" : "Joaquin Noguera",
+     "url" : "https://www.joaquinnoguera.com",
+     "sameAs" : [
+       "https://twitter.com/nvjoaquin13",,
+       "https://www.facebook.com/joaquin.noguera.31/",
+       "https://www.instagram.com/nvjoaquin/"
+      ]
+    }
+    </script>
 </html>
