--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 <script type="application/ld+json">
     {
      "@context" : "http://schema.org",
-     "@type" : "Website",
+     "@type" : "Organization",
      "name" : "Joaquin Noguera",
      "url" : "https://www.joaquinnoguera.com",
      "sameAs" : [
