--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name='theme-color' content="#13547A">
+    <meta name='theme-color' content="#008062">
 
     <link rel="apple-touch-icon" href="/favicon-manifest.png" />
     
