--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <meta property="og:title" content="Joaquin Noguera - Página Personal" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://www.joaquinnoguera.com/" />
+    <meta property="og:image" content="https://res.cloudinary.com/dbtp7mkgk/image/upload/c_scale,h_352,w_320/v1/porfolio/DSCN5169_vnq1bv.jpg" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="320" />
+    <meta property="og:image:height" content="352" />
+    <meta property="og:image:alt" content="Me" />
+
 </head>
 <body>
     <div id="app"></div>
