cambios en helmet

--- a/public/index.html
+++ b/public/index.html
@@ -11,28 +11,10 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-    <meta property="og:image" content="https://res.cloudinary.com/dbtp7mkgk/image/upload/c_scale,h_352,w_320/v1/porfolio/DSCN5169_vnq1bv.jpg" />
-    <meta property="og:image:type" content="image/jpeg" />
-    <meta property="og:image:width" content="320" />
-    <meta property="og:image:height" content="352" />
-    <meta property="og:image:alt" content="Me" />
+    <meta property="og:image" content="assets/main_img.png" />
 
 </head>
 <body>
     <div id="app"></div>
 </body>
-<script type="application/ld+json">
-    {
-     "@context" : "http://schema.org",
-     "@type" : "Organization",
-     "name" : "Joaquin Noguera",
-     "url" : "https://www.joaquinnoguera.com",
-     "sameAs" : [
-       "https://twitter.com/nvjoaquin13",,
-       "https://www.facebook.com/joaquin.noguera.31/",
-       "https://www.instagram.com/nvjoaquin/"
-      ]
-    }
-    </script>
 </html>
