--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html  prefix="og: http://ogp.me/ns#">
 <html lang="es"  prefix="og: https://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,7 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta property="og:image" content="assets/main_img.png" />
+    <meta name="og:image" content="assets/main_img.png" />
     <meta name="image" content="img.png">
     
 </head>
