--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="og:image" content="assets/main_img.png" />
+    <meta property="og:image" content="assets/main_img.png" />
     <meta name="image" content="img.png">
-    
+    <title>Pagina Personal</title>
 </head>
 <body>
     <div id="app"></div>
