--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,10 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="og:image" content="assets/main_img.png" />
     <meta property="og:image" content="assets/main_img.png" />
+    <meta property="og:description" content="Hola soy Joaquín Noguera y este es mi portfolio. Aquí podrás ver todos mis proyectos personales y trabajos, así como mis competencias en el desarrollo web." />
+    <meta property="og:author" content="Joaquin Noguera" />
+  
     <meta name="image" content="img.png">
     <title>Pagina Personal</title>
 </head>
